Working now button

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Etch-a-Sketch</title>
-    <style href="stylesheet" src="style.css"></style>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <div class="container" id="container"></div>
+    <div class="headingBtn">
+<btn class="btnStyle">Reset Sketch</btn>
+    </div>
+    <div class="container" id="container">
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
