--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="headingBtn">
-<btn class="btnStyle">Reset Sketch</btn>
+<btn class="btnStyle" id="resetBtn">Reset Sketch</btn>
     </div>
     <div class="container" id="container">
     </div>
